# codex-maintainer-kit

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
codex_maintainer_kit/: __init__.py  cli.py  issue_plan.py  maintainer_report.py  oss_brief.py  readme_score.py  release_notes.py  repo_check.py  schemas.py  triage_prompt.py
docs/: academy-workflow-checklist.md  ci-preflight-gate.md  form-ready-answers.md  github-action.md  maintainer-use-cases.md  openai-codex-oss-application.md  safe-secret-fixtures.md
examples/: commits.txt  first-issues.md
examples/reports/: codex-maintainer-kit-preflight.md  workday-automation-starter-preflight.md
examples/workflows/: repo-preflight.yml
schemas/: repo-check-report.schema.json
templates/: public-repo-checklist.md  release-workflow.md  security-preflight.md
tests/: __init__.py  test_repo_check.py  test_workflows.py
