[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-maintainer-kit"
version = "0.6.0"
description = "Local-first OSS maintainer preflight and workflow tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex Maintainer Kit contributors" }]
keywords = ["open-source", "maintainer", "codex", "preflight", "security", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]

[project.scripts]
codex-maintainer-kit = "codex_maintainer_kit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_maintainer_kit*"]
